# AI4KG

./: .gitignore  README.md
.github/: PAGES_DEPLOYMENT.md
.github/workflows/: deploy-docs-enhanced.yml  deploy-docs.yml
ai4kg/backend/: .env.example  API.md  Dockerfile  EDGE_IMPLEMENTATION_SUMMARY.md  README.md  api_test_results_1752472790.json  debug_search.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  start.sh  test.db  test_delete_impact.py  test_edge_integration.py
ai4kg/backend/app/: __init__.py
ai4kg/backend/app/api/routers/: analysis.py  auth.py  edges.py  files.py  graphs.py  nodes.py  search.py
ai4kg/backend/app/core/: config.py  database.py
ai4kg/backend/app/models/: models.py
ai4kg/backend/app/schemas/: schemas.py
ai4kg/backend/app/services/: auth_service.py  file_service.py  graph_service.py
ai4kg/backend/app/utils/: auth.py
ai4kg/backend/data/: ai4kg.db
ai4kg/backend/sample_data/: example_edges.csv  example_graph.json
ai4kg/backend/tests/: README.md  USAGE_GUIDE.md  conftest.py  test_analysis_files_search.py  test_auth.py  test_edges.py  test_file_import_export.py  test_graphs.py  test_integration.py  test_main.py  test_nodes.py  test_setup.py
ai4kg/frontend/: QUICKSTART.md  README.md  index.html  package-lock.json  package.json  test-api.html  vite.config.ts
docs/: README.md  _sidebar.md  guide.md  index.html
docs/api/: API.md  analysis.md  auth.md  edges.md  (+1 more)
scripts/: README.md  config.json  demo_import.py  graph_chunk_entity_relation.graphml  import_networkx.py  requirements.txt  validate_graph.py
(+59 files in other folders)
